[package]
name = "pravega-rust-client-shared"
version = "0.1.0"
edition = "2018"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Rust client."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

[dependencies]
bytes = "0.4"
snafu = "0.5.0"
async-trait = "0.1.36"
shrinkwraprs = "0.3.0"
derive-new = "0.5"
ordered-float = { version= "1.0.2", features = ["serde"]}
uuid = "0.8"
im = "14.3.0"
serde = { version = "1.0", features = ["derive"] }
murmurhash3 = "0.0.5"
encoding_rs = "0.8.23"
derive_more = "0.99.9"
tokio = { version = "0.2.20", features = ["full"] }
