[package]
name = "pravega-client-shared"
version = "0.1.0"
edition = "2018"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Rust client."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

[dependencies]
bytes = "0.4"
snafu = "0.6"
async-trait = "0.1"
shrinkwraprs = "0.3"
derive-new = "0.5"
ordered-float = { version= "1.0.2", features = ["serde"]}
uuid = "0.8"
im = "15"
serde = { version = "1.0", features = ["derive"] }
murmurhash3 = "0.0.5"
encoding_rs = "0.8"
derive_more = "0.99.9"
tokio = { version = "1.1", features = ["full"] }
