[package]
name = "pravega-wire-protocol"
version = "0.1.0"
edition = "2018"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "Readme.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Pravega Rust client."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pravega-rust-client-retry = {path= "../retry"}
pravega-connection-pool = {path= "../connection_pool"}
pravega-rust-client-shared = { path = "../shared"}
pravega-rust-client-config = {path = "../config"}
async-trait = "0.1.36"
bincode2 = "2.0.1"
byteorder = "1.3"
lazy_static = "1.4.0"
tracing = "0.1"
uuid = {version = "0.8", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6.2"
tokio = { version = "0.2.0", features = ["full"] }
futures = "0.3.5"
log = "0.4.8"
tokio-rustls = "0.14.0"
derive-new = "0.5"
serde_bytes = "0.11"