[package]
name = "pravega-wire-protocol"
version = "0.1.0"
edition = "2018"
categories = ["Network programming"]
keywords = ["streaming", "client", "pravega"]
readme = "README.md"
repository = "https://github.com/pravega/pravega-client-rust"
license = "Apache-2.0"
description = "An internal library used by the Pravega Rust client."
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>", "Wenqi Mou <wenqi.mou@dell.com>",
           "Sandeep Shridhar <sandeep.shridhar@dell.com>", "Wenxiao Zhang <wenxiao.zhang@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pravega-client-retry = "0.1"
pravega-connection-pool = "0.1"
pravega-client-shared = "0.1"
pravega-client-config = "0.1"
async-trait = "0.1"
bincode2 = "2.0.1"
byteorder = "1.3"
lazy_static = "1.4"
tracing = "0.1"
uuid = {version = "0.8", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6"
tokio = { version = "1.1", features = ["full"] }
futures = "0.3"
log = "0.4"
tokio-rustls = "0.22"
derive-new = "0.5"
serde_bytes = "0.11"
